--- a/index3.html
+++ b/index3.html
@@ -48,10 +48,22 @@
         <a class="button-35" href="#">Adventure</a>
         <a class="button-36" href="#">Racing</a>
         <a class="button-37" href="#">Sandbox</a>
-        <a class="button-38" href="#">Casual</a>
+        <a class="button-38"  href="#">Casual</a>
+      </div>
+<div class="games">
+   
+      <a href="https://scratch.mit.edu/projects/1052272715/fullscreen/"><img src="images/crac the code - img 123.png"  ></a>
+   </div>
+
+    
+
+
+
       </div>
 
     
     </body>
     </html>
+
+
 
