--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="right">
-          <img src="images/hero-image.png" alt="" />
+          <img src="images/1728037669774-removebg-preview.png" alt="" />
         </div>
         <div class="bg-color"></div>
       </header>
@@ -82,7 +82,7 @@
     <section id="about">
       <div class="container">
         <div class="left">
-          <h2>Unlock the Power of Flutter for Mobile App Development</h2>
+          <h2>Unlock the Power of Gaming</h2>
           <p>
             Discover how Flutter can help you create stunning and
             high-performance mobile apps in record time.
@@ -93,10 +93,10 @@
               <div class="icon">
                 <img src="images/check-icon.svg" alt="" />
               </div>
-              <h3>Simplified Development</h3>
+              <h3>
+Your Gateway to Gaming</h3>
               <p>
-                With Flutter, you can write code once and deploy it on both iOS
-                and Android platforms.
+At Gaming Hub, we connect you with the best games, reviews, and news. Whether you're a casual player or a hardcore gamer, we have something for everyone.
               </p>
             </div>
 
@@ -104,10 +104,9 @@
               <div class="icon">
                 <img src="images/check-icon.svg" alt="" />
               </div>
-              <h3>Beautiful UI</h3>
+              <h3>Comprehensive Game Reviews</h3>
               <p>
-                Create visually stunning user interfaces with Flutter's rich set
-                of customizable widgets.
+     Our expert gamers provide honest, detailed reviews to help you decide which games are worth your time.I
               </p>
             </div>
           </div>
@@ -116,7 +115,7 @@
         </div>
 
         <div class="right">
-          <img src="images/image1.jpg" alt="" />
+          <img src="images/GettyImages-1097026358-cbeb9059ffcf4610bde9a0d426110abd.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -173,48 +172,8 @@
 
     <!-- End of services section -->
 
-    <section id="why">
-      <div class="container">
-        <div class="left">
-          <img src="images/image2.png" alt="" />
-        </div>
 
-        <div class="right">
-          <h2>Why Choose Our Company for Mobile App Development</h2>
-          <p>
-            We excel in mobile app development using Flutter, delivering
-            innovative, high-performing apps with top-notch quality, seamless
-            user experience, and timely delivery.
-          </p>
 
-          <div class="features-container">
-            <div class="feature">
-              <div class="icon">
-                <img src="images/check-icon.svg" alt="" />
-              </div>
-              <h3>Expertise</h3>
-              <p>
-                Our team of skilled developers has extensive expertise in
-                Flutter app development.
-              </p>
-            </div>
-
-            <div class="feature">
-              <div class="icon">
-                <img src="images/check-icon.svg" alt="" />
-              </div>
-              <h3>Customization</h3>
-              <p>
-                We tailor each mobile app to meet the unique requirements and
-                preferences of our clients.
-              </p>
-            </div>
-          </div>
-
-          <a href="#" class="btn light">Contact Us</a>
-        </div>
-      </div>
-    </section>
 
     <!-- End of why choose us section -->
 
@@ -251,14 +210,14 @@
             </a>
             <div class="content">
               <a href="#">
-                <h3>Game Dev: Animations & Optimization</h3>
+                <h3>Gaming: Animations & Optimization</h3>
               </a>
               <div class="labels">
-                <a href="#" class="label">Game Dev</a>
+                <a href="#" class="label">Gaming</a>
                 <a href="#" class="label">Animations</a>
               </div>
               <p>
-                Improve your Flutter games with advanced animations and
+                Improved games with advanced animations and
                 optimization tips.
               </p>
             </div>
@@ -270,14 +229,14 @@
             </a>
             <div class="content">
               <a href="#">
-                <h3>Adding Multiplayer Features to Flutter Games</h3>
+                <h3>Adding Multiplayer Features to  Games</h3>
               </a>
               <div class="labels">
                 <a href="#" class="label">Networking</a>
                 <a href="#" class="label">Advanced</a>
               </div>
               <p>
-                Integrate real-time multiplayer functionality into your Flutter
+                Integrate real-time multiplayer functionality into your 
                 games.
               </p>
             </div>
@@ -314,8 +273,8 @@
       <div class="container">
         <div class="top">
           <div class="left">
-            <a href="#" class="logo">LOGO</a>
-            <p>Creating innovative solutions for a connected world.</p>
+            <a href="#" class="logo">Gaming Lab</a>
+            <p>Gaming Hub © 2024 – Play More, Live More</p>
           </div>
 
           <div class="right">
