--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       <a href="#blog">Blog</a>
       <a href="#contact">Contact Us</a>
       <a href="#" class="btn">Learn</a>
-      
     </div>
 
     <div class="container">
@@ -32,8 +31,15 @@
           <a href="#services">Services</a>
           <a href="#blog">Blog</a>
           <a href="#contact">Contact</a>
-           <a href="index2.html">Cart</a>
-          <img  src="images/profile-circle-icon-2048x2048-cqe5466q.png" class="btn"></img>
+          <a href="index2.html">Cart</a>
+          <img
+            src="/images/dark_mode_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png"
+            id="icon"
+          />
+          <img
+            src="images/profile-circle-icon-2048x2048-cqe5466q.png"
+            class="btn"
+          />
         </div>
 
         <div class="menu-icon">
@@ -47,7 +53,8 @@
         <div class="left">
           <h1>Welcome to Gaming Lab – Your Ultimate Source for Epic Games!</h1>
           <p class="sub-heading">
-  Explore, play, and discover the latest and greatest in the gaming world.
+            Explore, play, and discover the latest and greatest in the gaming
+            world.
           </p>
 
           <div class="buttons">
@@ -93,10 +100,11 @@
               <div class="icon">
                 <img src="images/check-icon.svg" alt="" />
               </div>
-              <h3>
-Your Gateway to Gaming</h3>
+              <h3>Your Gateway to Gaming</h3>
               <p>
-At Gaming Hub, we connect you with the best games, reviews, and news. Whether you're a casual player or a hardcore gamer, we have something for everyone.
+                At Gaming Hub, we connect you with the best games, reviews, and
+                news. Whether you're a casual player or a hardcore gamer, we
+                have something for everyone.
               </p>
             </div>
 
@@ -106,7 +114,8 @@ At Gaming Hub, we connect you with the best games, reviews, and news. Whether yo
               </div>
               <h3>Comprehensive Game Reviews</h3>
               <p>
-     Our expert gamers provide honest, detailed reviews to help you decide which games are worth your time.I
+                Our expert gamers provide honest, detailed reviews to help you
+                decide which games are worth your time.I
               </p>
             </div>
           </div>
@@ -115,7 +124,10 @@ At Gaming Hub, we connect you with the best games, reviews, and news. Whether yo
         </div>
 
         <div class="right">
-          <img src="images/GettyImages-1097026358-cbeb9059ffcf4610bde9a0d426110abd.jpg" alt="" />
+          <img
+            src="images/GettyImages-1097026358-cbeb9059ffcf4610bde9a0d426110abd.jpg"
+            alt=""
+          />
         </div>
       </div>
     </section>
@@ -172,9 +184,6 @@ At Gaming Hub, we connect you with the best games, reviews, and news. Whether yo
 
     <!-- End of services section -->
 
-
-
-
     <!-- End of why choose us section -->
 
     <div class="container">
@@ -217,8 +226,7 @@ At Gaming Hub, we connect you with the best games, reviews, and news. Whether yo
                 <a href="#" class="label">Animations</a>
               </div>
               <p>
-                Improved games with advanced animations and
-                optimization tips.
+                Improved games with advanced animations and optimization tips.
               </p>
             </div>
           </div>
@@ -229,15 +237,14 @@ At Gaming Hub, we connect you with the best games, reviews, and news. Whether yo
             </a>
             <div class="content">
               <a href="#">
-                <h3>Adding Multiplayer Features to  Games</h3>
+                <h3>Adding Multiplayer Features to Games</h3>
               </a>
               <div class="labels">
                 <a href="#" class="label">Networking</a>
                 <a href="#" class="label">Advanced</a>
               </div>
               <p>
-                Integrate real-time multiplayer functionality into your 
-                games.
+                Integrate real-time multiplayer functionality into your games.
               </p>
             </div>
           </div>
@@ -304,3 +311,4 @@ At Gaming Hub, we connect you with the best games, reviews, and news. Whether yo
     <script src="main.js"></script>
   </body>
 </html>
+
