--- a/index.html
+++ b/index.html
@@ -33,13 +33,8 @@
           <a href="#contact">Contact</a>
           <a href="index2.html">Cart</a>
           <img
-            src="/images/dark_mode_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png"
-            id="icon"
-          />
-          <img
-            src="images/profile-circle-icon-2048x2048-cqe5466q.png"
-            class="btn"
-          />
+            src="/images/dark_mode_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png"id="icon" />
+          <img src="images/profile-circle-icon-2048x2048-cqe5466q.png" class="btn" />
         </div>
 
         <div class="menu-icon">
