--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#contact">Contact</a>
           <a href="index2.html">Cart</a>
           <img
-            src="/images/dark_mode_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png"
+            src="https://play-lh.googleusercontent.com/T7iJ8gb1bHJzDsOJeRzMqg7ZKcRuVOr6XE5-Uzj0inIcKq4v6l4kKyQTArgxXyha9Ag=w240-h480-rw"
             id="icon"
             alt="Hi"
           />
